--- a/source/_posts/杂项/2016-11-03-vim常用命令.md
+++ b/source/_posts/杂项/2016-11-03-vim常用命令.md
@@ -8,6 +8,7 @@ date: 2016-11-03 23:31:47
 ---
 
 ![][image-1]
+
 # 插入模式
 按「i」切换进入插入模式「insert mode」，按"i"进入插入模式后是从光标
 当前位置开始输入文件；
@@ -17,12 +18,12 @@ date: 2016-11-03 23:31:47
   : **w filename** （输入 「w filename」将文章以指定的文件名filename保存）
   : **wq** (输入「wq」，存盘并退出vim)
   : **q!** (输入q!， 不存盘强制退出vim)
-  ：**ZZ** (输入「ZZ」，存盘并退出vim)
+  :**ZZ** (输入「ZZ」，存盘并退出vim)
 
+---
 # 移动光标
 vi可以直接用键盘上的光标来上下左右移动，但正规的vi是用小写英文字母
 「h」、「j」、「k」、「l」，分别控制光标左、下、上、右移一格。
-
 * 按数字「0」：移到行首。
 * 按「G」：移动到文章的开头。
 * 按「w」：光标跳到下个字符串的开头
