--- a/source/_posts/环境搭建/2016-11-08-用Jekyll搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Jekyll搭建博客.md
@@ -25,6 +25,7 @@ gem install rails
   7.安装Jekyll（“Mac的安装见错误解决”）
 gem install jekyll
 
+之后需要添加功能，要安装其他gems插件时，进入该项目目录再安装，不然不会被包含，就不会生效。
 错误解决：
 **Mac**：
 ```
@@ -101,27 +102,164 @@ layout: post
 title:  "第一篇博客"
 date:   2016/10/26 13:03:42
 categories: 文章阅读
-tags: 第一篇博客,jekyll搭建博客
+tag: 第一篇博客,jekyll搭建博客
 ---
 
 这里开始用Markdown的语法编写文章。
 
 ```
-每次都自己写yml文件头太麻烦，配置中会说到用Rakefile脚本自动生成文件。
+每次都自己写yml文件头太麻烦，配置中会说到用Rakefile脚本自动生成文件。**注意：yml文件头不要有中文，.md文件名也不要有中文，**否则网页会显示404错误（原因未知）
 ---
 # 配置优化、美化站点
+## 主题部分
+可以在http://jekyllthemes.org/这个上面找找，Hux这个主题还是不错的，喜欢的直接下载，重新修改里面配置就行了。可以fork或下载回来，整个替换，把文章拷过去就行。一个很好的Hux模板：https://github.com/huxpro/huxpro.github.io/
+
+## 配置文件设置
+我用到的参数：
+```
+#不要在配置文件中使用 tab 制表符,用空格代替。
+#配置请参考：http://jekyllcn.com/docs/configuration/#front-matter-defaults
 
 
-使用Hux主题
-默认的主题不是很喜欢？客官可以在http://jekyllthemes.org/这个上面找找，个人觉得Hux这个主题还是不错的，喜欢的直接下载，重新修改里面配置就能为自己所用了。
-关于配置文件里面多说的duoshuo_username是什么，在多说创建站点的时候，这个框框里面填的就是你的duoshuo_username：
+# Site settings
+title: LeoLan的博客
+author: Leo Lan
+email: 842632422@qq.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 
-配置完在本地预览没有问题了，就可以直接把代码上传到github，然后访问yourusername.github.io就能看到你刚刚创建的blog了。
+#自定义站点标题
+#webrick:
+#  headers:
+#    My-Header: My-Value
+#    My-Other-Header: My-Other-Value
 
+
+# Site URL NOTE: if your site is base on subdir /blog you should change base to "/blog"
+domain: "http://myleolan.github.io" #你的github网址  the domain URL for your site
+base: ""  # the relative path that different with domain so you can test locally
+
+# Source URL NOTE: end with / cause it's [URL + FILE]
+w3c_url: "/w3c/"  # the base url of css js and images
+postImage_url: "/w3c/images/" # the base url of post images
+postfile: "/db/Postfile" # the Database
+sitefile: "/db/Sitefile" # the Database
+
+# 3rd URL
+duoshuo_short_name: "leolan" # 注册多说是填写的网址前缀 the user of user.domain.com 
+duoshuo_user_uid: "a61c3f290749b621688a3f42c7e8e31c" #多说的uid   the admin user uid  
+duoshuo_user_name: "leolan" #多说的用户名 the admin user names   
+duoshuo_max_depth: "2"  # the max_depth setting in duoshuo comments
+duoshuo_url: "/w3c/duoshuo/embed.min.js" # the local duoshuo comment plugin, you can change it to remote "http://static.duoshuo.com/"
+jquery_url: "http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js" # use cdn
+baiduTemplate_url: "/w3c/js/baiduTemplate.js" #use local
+google_analytics_id: "UA-86334360-1"  #Google分析
+
+# Build Settings
+excerpt_separator: "\n\n" # you can specify your own separator here, default is "\n\n" String
+permalink: /:year/:month/:day/:title.html   #生成html文件的命名方式
+highlighter: rouge   #代码高亮
+markdown: kramdown   #markdown文档处理器
+kramdown:
+  input: GFM
+  hard_wrap: true # a newline in markdown text would be changed to <br>
+
+#插件（需要包含的插件）
+gems:
+  - jemoji
+
+lsi: BOOL   #建立文件索引
+
+####---------------------------------------------------------------------
+#以下为github的默认设置
+
+# Following is got in Github Help With Configuring Jekyll
+# Github Page Default Settings which you can override:
+
+# kramdown:
+#   input: GFM
+#   hard_wrap: false
+# gems:
+#   - jekyll-coffeescript
+#   - jekyll-paginate
+
+# Github Page override the following settings which you cannot change:
+# lsi: false
+# safe: true    #安全方式，禁用所有插件
+# source: [your repo's top level directory]
+# incremental: false
+# highlighter: rouge
+# gist:
+#  noscript: false
+# kramdown:
+#  math_engine: mathjax
+
+```
+
+
+## 自动生成文件模板
+前面说到的带yml信息的文件头
+```
+---
+layout: post
+title:  "第一篇博客"
+date:   2016/10/26 13:03:42
+categories: 文章阅读
+tag: 第一篇博客,jekyll搭建博客
+---```
+文件头可以自动生成，而不用每次都手工码字，在网站根目录下创建Rakefile文件（ruby的一中脚本配置文件）
+里面填入代码：
+```
+task :default => :new
+
+require 'fileutils'
+
+desc "创建新 post"
+task :new do
+  puts "请输入要创建的.md文件名："
+  @url = STDIN.gets.chomp
+  puts "请输入 文章 标题："
+  @name = STDIN.gets.chomp
+  puts "请输入 文章 子标题："
+  @subtitle = STDIN.gets.chomp
+  puts "请输入 文章 分类，以空格分隔："
+  @categories = STDIN.gets.chomp
+  puts "请输入 博客分类 标签，以空格分隔："
+  @tag = STDIN.gets.chomp
+  @slug = "#{@url}"
+  @slug = @slug.downcase.strip.gsub(' ', '-')
+  @date = Time.now.strftime("%F")
+  @post_name = "_posts/#{@date}-#{@slug}.md"
+  if File.exist?(@post_name)
+      abort("文件名已经存在！创建失败")
+  end
+  FileUtils.touch(@post_name)
+  open(@post_name, 'a') do |file|
+      file.puts "---"
+      file.puts "layout: post"
+      file.puts "title: #{@name}"
+      file.puts "subtitle: #{@subtitle}"
+      file.puts "author: Leo Lan"
+      file.puts "date: #{Time.now}"
+      file.puts "categories: #{@categories}"
+      file.puts "tag: #{@tag}"
+      file.puts "published: true"
+      file.puts "---"
+  end
+  exec "vim #{@post_name}"
+end```
+**layout**表示使用的是post布局，title是文章标题，
+**date**是自动生成的日期，
+**subtitle**是副标题
+**categories**是该文章生成html文件后存放的目录（分类），可以去_site/jekyll/update下找到对应日期下面的html文档。当然你也可以只设置jekyll单一的目录，甚至是更多级别的目录，用空格分开即可。**tag**是文章的标签。
+**published**表示是否发布文章
+下次在命令行输入`rake new`按提示一步一步就能创建一个很好的文件啦，剩下的只需要专心写作就好了。
 
 
 参考：http://www.liubaicai.net/articles/733/
-layout表示使用的是post布局，title是文章标题，date是自动生成的日期，categories是该文章生成html文件后存放的目录，可以去_site/jekyll/update下找到对应日期下面的html文档。当然你也可以只设置jekyll单一的目录，甚至是更多级别的目录，用空格分开即可。头信息设置完成后就可以书写正文了。
+
 
 ---
 # 用Github Pages生成个人博客
@@ -173,7 +311,7 @@ gem 'github-pages', group: :jekyll_plugins```
 
 执行下面的命令安装Github Pages的工具集**（在网站根目录，就是Gemfile文件的路径）**
 `bundle install`
-运行起来（一开始创建了网站就可以直接跑起来啦，如果没有创建网站，看下面的**参考链接第三步**，创建或fork别人的。）
+运行起来（一开始创建了网站就可以直接跑起来啦，如果没有创建网站，创建或fork别人的。）
 `bundle exec jekyll serve`
 
 如果出现**bundle exec jekyll serve**能启动，而**jekyll serve**不能启动，则删除Gemfile和Gemfile.lock重新运行jekyll serve即可。
@@ -181,7 +319,6 @@ gem 'github-pages', group: :jekyll_plugins```
 
 注意：如果是是下载了别人的模板进行修改，只把文件拷到自己项目中进行添加就可以了，不要全选把**.git**文件夹也拷过了，别人的分支和自己的不同时会出现各种问题。
 
-一个很好的Hux模板：https://github.com/huxpro/huxpro.github.io/
 调试好各种东西后就可以推送到Github了。
   1. 用markdown写文章，并按规定名称格式保存在_posts里。
   2. 用`jekyll serve –watch`或`bundle exec jekyll server`启动服务器，在浏览器里查看。(指定端口在**_config.yml**文件中增加`port: xxxx`)
