--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -646,10 +646,10 @@ git push
 # 绑定域名
 原理和博客绑定域名是一样的
 
-* 1· 在你的项目下新建一个**CNAME**文件，注意没有后缀名。在里面添加你的域名，如我的就是** leolan.top**，然后推送**CNAME文件**到远程仓库。
-* 2· 到域名服务商那里增加你的CNAME记录。添加两条记录，@和www的主机记录，记录类型为CNAME，记录值为 `username.github.io. `，重要的是 io 后面还有一个原点，切记。
-![](http://ofyfogrgx.bkt.clouddn.com//blog/%E7%94%A8github%E5%86%99%E5%BC%80%E6%BA%90%E4%B9%A6%E7%B1%8D21.png)
-过几分钟，刷新网页，就能直接用域名访问了，因为是在项目内建的**CNAME**文件，所以域名直接指向此项目文件夹，其他项目可以用其他域名指定。
+* 1· 在你的项目下新建一个**CNAME**文件，注意没有后缀名。在里面添加你的域名，如我的就是** leolan.top**，然后推送**CNAME文件**到远程仓库。（方法二是直接在pages页上找到域名绑定设置，最好同时绑定如：**leolan.top**和**www.leolan.top**,少绑一个，没绑的那个打不开）
+* 2· 到域名服务商那里增加你的CNAME记录。添加两条记录，@和www的主机记录，记录类型为CNAME，记录值为 `username.github.io. `，重要的是 io 后面还有一个原点（看官方帮助文档Coding的就不用加点），切记。
+![](http://ofyfogrgx.bkt.clouddn.com//blog/%E5%9F%9F%E5%90%8D%E7%BB%91%E5%AE%9A.png)
+过几分钟，刷新网页，就能直接用域名访问了，因为是在项目内建的**CNAME**文件，所以域名直接指向此项目文件夹，其他项目可以用其他域名设定。
 
 ---
 
