--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -344,7 +344,7 @@ facebook_comments_plugin:
   width: 100%       # default width is 550px
   scheme: light     # default scheme is light (light or dark)
 
-
+#网站访问量统计http://ibruce.info/2015/04/04/busuanzi/  其中id="busuanzi_container_site_*v">这句可以不要。 
 # Show number of visitors to each article.   用leancloud做接口开启阅读计数功能
 #文章阅读量统计：http://www.joryhe.com/2016-05-29-how_to_create_leancloud_read_Counter.html
 # You can visit https://leancloud.cn get AppID and AppKey.
