--- a/source/_posts/环境搭建/2016-10-21-Ruby开发环境搭建.md
+++ b/source/_posts/环境搭建/2016-10-21-Ruby开发环境搭建.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title: "ruby开发环境搭建"
+title: ruby开发环境搭建
 categories:
-- 环境搭建
+  - 环境搭建
 tags:
-- ruby2.3.1安装
+  - ruby2.3.1安装
+abbrlink: 31766
 date: 2016-10-31 11:21:24
 ---
 # Ubuntu 16 #
