--- a/source/_posts/Dev/2016-11-04-Git教程.md
+++ b/source/_posts/Dev/2016-11-04-Git教程.md
@@ -47,7 +47,7 @@ git config --list      #查看已配置的用户信息```
 
 ---
 
-# 基本使用方法
+# 基本使用方法(包含高级命令)
 **一般进入某项目的目录后再执行以下命令。**
 ```
 git init	        #设置当前目录为Git仓库
@@ -61,7 +61,12 @@ git status		#查看当前目录文件的状态，加 -s 显示简短信息。"A"
 git add 文件名   #添加文件到项目缓存中，没有添加的文件不属于项目文件，也不会痛不到服务器。
 git add .  		#添加当前目录到项目缓存中，如果添加多个文件，此命令更方便。
 git commit -m "项目的版本或简短说明"	#可以指定版本号及简单说明改动了哪些内容，同时会把所有改动同步到服务器上。
-git commit -am "项目的版本或简短说明"	#改动了多个文件又不想一个个添加，此命令自动添加所有改动的文件并同步到服务器。```
+git commit -am "项目的版本或简短说明"	#改动了多个文件又不想一个个添加，此命令自动添加所有改动的文件并同步到服务器。
+git branch -vv                          #查看分支跟踪情况
+git checkout --track <remote base>/<remote branch>   #让当前分支跟踪远程分支（1）
+git checkout -b <local branch> <remote base>/<remote branch>                             #让当前分支跟踪远程分支（2）
+以上两条命令作用基本一致，不同的是第二条命令可以重命名检出的分支。
+git branch -u <remote base>/<remote branch>          #修改当前跟踪分支```
 
 Git的所有工作都是现在本地缓存的，只有执行**git commit -m "简短说明"** 后才会向服务器提交。
 ```
@@ -70,8 +75,19 @@ git diff --cached	#已缓存的改动
 git diff HEAD		#已缓存和未缓存的所有改动
 git diff --stat		#显示摘要而非整个diff
 git reset -- HEAD 文件	#取消文件已缓存的内容，--很重要，没有加--表示切换到另一个分支。
-git rm 文件		#从项目中及本地删除文件,可不用执行。
-git mv 文件		#从项目中及本地重命名文件,可不用执行。```
+git rm 文件		 #从项目中及本地删除文件,可不用执行。
+git mv 文件		 #从项目中及本地重命名文件,可不用执行。
+git reset [file] #取消暂存
+git remote -v    #查看远程仓库url
+git remote add <basename> <url>  #新增远程仓库
+git remote show <basename>       #查看远程仓库详细信息
+git remote rename <old basename> <new basename>  #重命名远程仓库
+git push <remote base> --delete <remote branch>  #删除远程分支
+git branch [--merged | --no-merged]  #查看已合并|未合并的本地仓库分支
+git checkout -b [branchname] [tagname]           #在特定的版本上创建一个新的分支并切换到此分支
+git checkout -b [local branch] [remote base]/[remote branch]  #将远程分支检出到本地分支
+git rebase [basebranch]                          #变基是将一系列提交按照原有次序依次应用到另一分支上，而合并是把最终结果合在一起。
+```
 
 ---
 # 创建远程仓库
@@ -106,6 +122,16 @@ git mv 文件		#从项目中及本地重命名文件,可不用执行。```
 `git clone git@github.com:MyLeoLan/testgit.git`
 实际上，Git支持多种协议，默认的git://使用ssh，但也可以使用https等其他协议。
 使用https除了速度慢以外，还有个最大的麻烦是**每次推送都必须输入口令**，但是在某些只开放http端口的公司内部就无法使用ssh协议而只能用https。
+开启缓存机制(缓存账户密码)可以达到和添加了公钥的效果一样。
+```
+开启linux缓存
+git config --global credential.helper cache
+
+开启windows缓存
+git config --global credential.helper wincred
+git config --global credential.helper winstore
+另一种方法：https://segmentfault.com/a/1190000000757283
+```
 
 # 本地仓库推送到远程仓库
 把本地仓库的内容推送到远程（GitHub）仓库。在本地的XXX仓库下运行命令：
@@ -386,6 +412,10 @@ git log --graph --pretty=oneline --abbrev-commit
 *   59bc1cb conflict fixed
 ...```
 
+## 远程仓库新建了一个分支，更新远程分支信息
+```
+git fetch <remote base>```
+
 ## 冲突解决
 当合并出现冲突时，一般要手动解决。
 直接查看master分支的readme.txt（冲突文件）的内容并修改：
@@ -509,6 +539,10 @@ Git提示销毁失败：feature-vulcan分支还没有被合并，如果删除，
 有些时候，你必须把某些文件放到Git工作目录中，但又不能提交它们，比如保存了**数据库密码的配置文件**啦，等等，每次**git status**都会显示**Untracked files ...**，有强迫症的童鞋心里肯定不爽。好在Git考虑到了大家的感受，这个问题解决起来也很简单，在Git工作区的根目录下创建一个特殊的**.gitignore**文件，然后把要忽略的文件名填进去，Git就会自动忽略这些文件。
 
 不需要从头写**.gitignore**文件，GitHub已经为我们准备了各种配置文件，只需要组合一下就可以使用了。所有配置文件可以直接在线浏览：**https://github.com/github/gitignore**   已经配置好了要忽略的文件，下载回来要文件名要改为**.gitignore**放在项目根目录下。
+
+如果需要忽略的文件已经添加到版本库中，但不再想要跟踪此文件的版本信息。执行以下命令移除跟踪但不删除文件。
+```
+git rm --cached [file]```
 
 **忽略文件的原则是：**
 
@@ -790,19 +824,13 @@ https://my.oschina.net/u/2351685/blog/509322
 Gitolite的使用，参考：http://www.uml.org.cn/pzgl/201404092.asp
 
 ---
-# 参考资料：
-连猴子都会的git：
-http://backlogtool.com/git-guide/cn/
-
-Pro Git：http://iissnan.com/progit/
-廖雪峰git：
-
-http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000
-
-外国友人git手册:
-https://pan.baidu.com/s/1kU5OCOB#path=%252Fpub%252Fgit
-10个迅速提升你 Git 水平的提示:
-http://www.oschina.net/translate/10-tips-git-next-level
+# 参考资料
+* [连猴子都会的git](http://backlogtool.com/git-guide/cn/)
+* [Git官方文档](https://git-scm.com/book/zh/v2)
+* [Pro Git](http://iissnan.com/progit/)
+* [廖雪峰git](http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000)
+* [外国友人git手册](https://pan.baidu.com/s/1kU5OCOB#path=%252Fpub%252Fgit)
+* [10个迅速提升你 Git 水平的提示](http://www.oschina.net/translate/10-tips-git-next-level)
 
 
 ---
