--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -6,6 +6,7 @@ tags:
   - 用Hexo搭建博客
   - Hexo github
   - Hexo Coding
+  - Next 定制
 abbrlink: 23632
 date: 2016-11-08 15:20:01
 ---
@@ -290,7 +291,7 @@ menu:
 #   Map a menu item to a specific FontAwesome icon name.
 #   Key is the name of menu item and value is the name of FontAwsome icon. Key is case-senstive.
 #   When an question mask icon presenting up means that the item has no mapping icon.
-menu_icons:
+menu_icons:   #http://fontawesome.io/icons/
   enable: true
   #KeyMapsToMenuItemKey: NameOfTheIconFromFontAwesome
   home: home
@@ -398,13 +399,11 @@ toc:
   # Automatically add list number to toc.
   number: true
 
-
 # Creative Commons 4.0 International License.
 # http://creativecommons.org/
 # Available: by | by-nc | by-nc-nd | by-nc-sa | by-nd | by-sa | zero
 #creative_commons: by-nc-sa
 #creative_commons:
-
 
 sidebar:
   # Sidebar Position, available value: left | right
@@ -1201,6 +1200,20 @@ duoshuo_info:
 **custom.styl**文件为用户自定义风格，卸载里面的内容会优先覆盖主题的设定，也可以定义其他的方法等。
 
 ---
+### 修改文章超链接样式
+将链接文本设置为蓝色，鼠标划过时文字颜色加深，并显示下划线。
+修改 **themes\next\source\css\_custom\custom.styl **，添加如下 `css` 样式（颜色可以自己更改，百度html颜色代码即可找到）：
+``` css
+.post-body p a {
+  color: #0593d3;
+  border-bottom: none;
+  &:hover {
+    color: #0477ab;
+    text-decoration: underline;
+  }
+}
+
+---
 ### High一下
 修改**header.swig**模板
 **模板位置**：themes\next\layout\_partials\header.swig
@@ -1221,7 +1234,7 @@ duoshuo_info:
         </li>
       {% endif %}```
 插入以下内容,感谢Neveryu修复了一些bug，以下是Neveryu的代码。
-```
+```css
  <!-- 自定义High一下的功能 -->
       <li class="menu-item"> <a title="把这个链接拖到你的工具栏中,任何网页都可以High" href='javascript:(
     /*
@@ -1430,9 +1443,32 @@ duoshuo_info:
         }
     }
     })()'><i class="menu-item-icon fa fa-music fa-fw"></i>High一下</a> </li>
-          <!-- end High一下 -->
+          <!-- end High一下 -->```
+
+---
+### 给 Github 添加 README
+默认情况下，Github中每一个项目，我们希望有一份**README.md**的文件来作为项目的说明，但是我们在项目根目录下的`blog\source`目录下创建一份**README.md**文件，写好说明介绍，部署的时候，这个**README.md**会被hexo解析掉，而不会被解析到Github中去的。
+正确的解决方法其实很简单：
+** 把`README.md`文件的后缀名改成"MDOWN"然后扔到`blog\source`文件夹下即可，这样hexo不会解析，Github也会将其作为MD文件解析。 **
+
+或者你还可以在站点配置文件中修改，以禁止编译文件。
+```
+skip_render:
+    - README.md
+```
+
+---
+### 给 Blog 添加 LICENSE
+修改主题配置文件中的 160 行左右：
 
 ```
+# Creative Commons 4.0 International License.
+# http://creativecommons.org/
+# Available: by | by-nc | by-nc-nd | by-nc-sa | by-nd | by-sa | zero
+creative_commons: by-nc-sa
+#creative_commons:```
+
+取消第 4 行的注释，然后选择你想使用的 LICENSE 即可，可选项参照第 3 行。
 
 ---
 ### 错误信息
@@ -1475,10 +1511,5 @@ git push
 * 2· 到域名服务商那里增加你的CNAME记录。添加两条记录，@和www的主机记录，记录类型为CNAME，记录值为 `username.github.io. `，重要的是 io 后面还有一个原点（看官方帮助文档Coding的就不用加点），切记。
 ![](http://ofyfogrgx.bkt.clouddn.com//blog/%E5%9F%9F%E5%90%8D%E7%BB%91%E5%AE%9A.png)
 过几分钟，刷新网页，就能直接用域名访问了，因为是在项目内建的**CNAME**文件，所以域名直接指向此项目文件夹，其他项目可以用其他域名设定。
-
----
-
-# 参考资料
-[Hexo](http://www.joryhe.com/tags/hexo/) 　　　 [Jekyll迁移到Hexo](http://www.ezlippi.com/blog/2016/02/jekyll-to-hexo.html)
 
 ---
