--- a/source/_posts/虚拟化/2016-11-03-Docker安装.md
+++ b/source/_posts/虚拟化/2016-11-03-Docker安装.md
@@ -16,9 +16,11 @@ Docker官网下载：https://www.docker.com/products/overview
 
 ---
 # Centos 7
-### 1、root用户登录，`uname -r`确保内核版本大于等于3.10
+Centos 6的内核版本太低，需要升级内核及整个系统的依赖库，比较复杂，不建议使用。
+## root用户登录，`uname -r`确保内核版本大于等于3.10
 `yum update`更新系统
-### 2、加入Docker源
+
+## 加入Docker源
 ```
 tee /etc/yum.repos.d/docker.repo <<-'EOF'
 [dockerrepo]
@@ -28,7 +30,8 @@ enabled=1
 gpgcheck=1
 gpgkey=https://yum.dockerproject.org/gpg
 EOF```
-### 3、安装：
+
+## 安装
 ```
 yum install docker-engine
 systemctl enable docker.service
@@ -38,25 +41,35 @@ systemctl start docker```
 
 # Windows
 下载最新exe安装包进行安装。
+## Windows 10以下
+Boot2docker：
 https://github.com/boot2docker/windows-installer/releases
+
+Toolbox：https://github.com/docker/toolbox/releases
+
+## Windows 10以上
+官网下载：https://docs.docker.com/docker-for-windows/
 
 ---
 
 # Ubuntu 14 && Ubuntu 16
-### 1、root用户登录，`uname -r`确保内核版本大于等于3.10
-### 2、加入Docker源
+## root用户登录，`uname -r`确保内核版本大于等于3.10
+
+## 加入Docker源
 ```
 apt-get update
 apt-get install apt-transport-https ca-certificates
 apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D```
-##### 选择对应版本在终端运行命令
+
+### 选择对应版本在终端运行命令
 Trusty 14.04 (LTS)	`deb https://apt.dockerproject.org/repo ubuntu-trusty main`
 Xenial 16.04 (LTS)	`deb https://apt.dockerproject.org/repo ubuntu-xenial main`
 ```
 echo "<REPO>" | sudo tee /etc/apt/sources.list.d/docker.list
 apt-get update
 apt-cache policy docker-engine```
-### 3、安装：
+
+## 安装
 ```
 apt-get update
 apt-get install linux-image-extra-$(uname -r) linux-image-extra-virtual
@@ -66,7 +79,7 @@ service docker start
 ---
 
 # Mac
-1 安装
+## 安装包安装
 下载最新pkg格式安装包：Boot2Docker-1.3.2.pkg进行安装。
 **https://github.com/boot2docker/osx-installer/releases/latest**
 
@@ -91,7 +104,7 @@ boot2docker download
 boot2docker start```
 
 
-### Brew方式安装
+## Brew方式安装
 ```
 brew update
 brew install docker
@@ -104,12 +117,12 @@ brew link boot2docker```
 
 **Boot2Docker的缺省用户名为docker，密码为tcuser。**
 
-## 运行Docker
+# 运行Docker
 在终端上跑一个“hello world” 的示例来测试Docker。启动虚拟机然后运行：
 `docker run ubuntu echo hello world`
 这样应该会下载ubuntu镜像并打印hello world。
 
-## 容器端口跳转
+# 容器端口跳转
 最新版的boot2docker建立了一个仅有网络适配器的主机提供可以接入容器的端口。
 如果你运行一个有公开端口的容器，
 
@@ -119,7 +132,7 @@ brew link boot2docker```
 `boot2docker ip` 显示当前IP
 这个IP地址可能被VirtualBox启用的DHCP修改。
 
-#### Boot2Docker管理工具提供了很多命令:
+# Boot2Docker管理工具提供了很多命令:
 `./boot2docker [<options>] [<args>]`
 
 参数：**{help|init|up|ssh|save|down|poweroff|reset|restart|config|status|info|ip|delete**
