--- a/source/_posts/环境搭建/2016-11-02-Node-js开发环境搭建.md
+++ b/source/_posts/环境搭建/2016-11-02-Node-js开发环境搭建.md
@@ -17,16 +17,18 @@ date: 2016-11-02 11:44:34
 ---
 
 # Ubuntu 16 、CentOS 7 
-### 法一：apt-get命令安装
+## 法一：apt-get命令安装
 
 ```
 apt install nodejs-legacy nodejs npm
 ```
 
-### 法二：源码安装(用root用户操作)
+## 法二：源码安装(用root用户操作)
  
 **（6版本以下要升级g++及其他库，去官网下载带linux字样的编译好的版本简单点）**
-### gcc版本要4.8以上
+
+**gcc版本要4.8以上**
+
 Centos: **yum install g++ cmake gcc-c++ gmake -y**           
 
 Ubuntu：**apt-get install python build-essential gcc g++**   
@@ -66,23 +68,23 @@ npm模块安装路径
 
 指定路径：**/usr/local/node/版本号/lib/node_modules**
 
---------------------------------------------------------------------------------
+---
 
 # 淘宝 NPM 镜像源
 国内直接使用 npm 的官方镜像可能非常慢的，可以使用淘宝 NPM 镜像。
 淘宝 NPM 镜像是一个完整 npmjs.org 镜像，你可以用此代替官方版本(只读)，同步频率目前为 10分钟 一次以保证尽量与官方服务同步。
 **http://npm.taobao.org/**
-### 方法一、通过config命令
+## 方法一、通过config命令
 
 ```
 npm config set registry https://registry.npm.taobao.org
 npm info underscore #（如果上面配置正确这个命令会有字符串response） 
 ```
 
-### 方法二、命令行指定
+## 方法二、命令行指定
 `npm --registry https://registry.npm.taobao.org info underscore` 
 
-### 方法三、编辑 ~/.npmrc 加入下面内容
+## 方法三、编辑 ~/.npmrc 加入下面内容
 `registry = https://registry.npm.taobao.org`
 
 你可以使用淘宝定制的 cnpm (gzip 压缩支持) 命令行工具代替默认的 npm:
