--- a/source/_posts/虚拟化/2016-11-03-Docker安装.md
+++ b/source/_posts/虚拟化/2016-11-03-Docker安装.md
@@ -17,10 +17,12 @@ Docker官网下载：https://www.docker.com/products/overview
 ---
 # Centos 7
 Centos 6的内核版本太低，需要升级内核及整个系统的依赖库，比较复杂，不建议使用。
-## root用户登录，`uname -r`确保内核版本大于等于3.10
+
+root用户登录，`uname -r`确保内核版本大于等于3.10
 `yum update`更新系统
 
-## 加入Docker源
+
+加入Docker源
 ```
 tee /etc/yum.repos.d/docker.repo <<-'EOF'
 [dockerrepo]
@@ -31,14 +33,14 @@ gpgcheck=1
 gpgkey=https://yum.dockerproject.org/gpg
 EOF```
 
-## 安装
+安装
 ```
 yum install docker-engine
 systemctl enable docker.service
 systemctl start docker```
 
----
 
+---
 # Windows
 下载最新exe安装包进行安装。
 ## Windows 10以下
@@ -51,30 +53,38 @@ Toolbox：https://github.com/docker/toolbox/releases
 官网下载：https://docs.docker.com/docker-for-windows/
 
 ---
-
 # Ubuntu 14 && Ubuntu 16
-## root用户登录，`uname -r`确保内核版本大于等于3.10
+root用户登录，`uname -r`确保内核版本大于等于3.10
 
-## 加入Docker源
+**法一**：`apt-get install docker docker.io -y`
+
+**法二**：安装最新版
+1.增加GPG密钥
+
 ```
 apt-get update
 apt-get install apt-transport-https ca-certificates
 apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D```
 
-### 选择对应版本在终端运行命令
+2.新增或编辑**source**列表里的**docker.list**文件
+`vim /etc/apt/sources.list.d/docker.list` 如果不存在就新增,填入下面一个地址。保存退出
 Trusty 14.04 (LTS)	`deb https://apt.dockerproject.org/repo ubuntu-trusty main`
 Xenial 16.04 (LTS)	`deb https://apt.dockerproject.org/repo ubuntu-xenial main`
-```
-echo "<REPO>" | sudo tee /etc/apt/sources.list.d/docker.list
-apt-get update
-apt-cache policy docker-engine```
 
-## 安装
+```
+apt-get purge lxc-docker  #清理以前安装过的docker源，没有安装的话，跳过
+apt-cache policy docker-engine #查看是否有正确的可用版本
+```
+
+3.安装Docker
+
 ```
 apt-get update
 apt-get install linux-image-extra-$(uname -r) linux-image-extra-virtual
+#从14.04版本以上开始docker推荐安装linux-image-extra
 apt-get install docker-engine
 service docker start
+docker run hello-world
 ```
 ---
 
