--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -22,7 +22,6 @@ mysql       http://www.mysql.com/
 Discuz!     http://www.discuz.net/forum.php
 WordPress   https://cn.wordpress.org/
 
-
 ---
 # 网站管理
 joomla    https://www.joomla.org/
@@ -30,14 +29,12 @@ WDCP      http://www.wdlinux.cn/wdcp/
 AMH       http://amh.sh/install.htm
 PHPCMS    http://www.phpcms.cn/
 
-
 ---
 # yum源
 网易163源          http://mirrors.163.com/
 阿里云源           http://mirrors.aliyun.com/  
 搜狐源             http://mirrors.sohu.com/
 中科大源           http://mirrors.ustc.edu.cn/
-
 
 ---
 # 系统下载
@@ -59,16 +56,25 @@ http://www.cnblogs.com/DamonTang/archive/2012/10/17/2727942.html
 瓦力：http://www.walle-web.io
 Jenkins：https://jenkins.io
 
+# 博客平台
+静态：
+Hexo       https://hexo.io
+Forbox     https://www.farbox.com
+Jekyll     http://jekyll.com.cn
+Pelican    http://blog.getpelican.com
+
+动态：
+typecho    http://typecho.org
+WordPress  https://cn.wordpress.org
+Z-Blog     https://www.zblogcn.com
+Emlog      http://www.emlog.net
+
 
 ---
 # 学习、技能
 **HTML**：
 
 W3school：http://www.w3school.com.cn/index.html
-
-
-
-
 
 
 
@@ -105,17 +111,24 @@ SVN：
 
 ---
 # 别人的博客
+http://www.arao.me
 http://www.ilanni.com
 http://iwanli.me
 http://blog.foreverqing.com
-www.jokinkuang.info
+http://www.jokinkuang.info
 http://www.tianfeiyu.com
 http://yonsm.net
 http://tianshaojie.com   Android
-http://www.ezlippi.com  
+http://www.ezlippi.com 
 http://www.joryhe.com
-https://www.maoshu.cc
+https://www.maoshu.cc/page/6   猫叔Mac
 https://teddysun.com
+https://neveryu.github.io
+http://willxue.top
+http://zhishuo.info
+http://notes.iissnan.com
+http://blog.tangxiaozhu.com/p/45374067/
+
 
 ---
 
