--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -422,12 +422,12 @@ sidebar:
 
 
 # Blogrolls 友情链接
-#links_title: Links
+links_title: 友链
 #links_layout: block
+links_icon: heartbeat
 #links_layout: inline
-#links:
-  #Title: http://example.com/
-
+links:
+  Jerry Locke: https://jerry.hk/
 
 # ---------------------------------------------------------------
 # Misc Theme Settings
@@ -555,7 +555,7 @@ leancloud_visitors:
   app_id: zieuxKa4IjAP6VgxxvBe4vkj-gzGzoHsz
   app_key: MHGN54IEuofFNV1AROiRkEoG
 
-# Show PV/UV of the website/page with busuanzi. 不算子网站访问量统计
+# Show PV/UV of the website/page with busuanzi. 不蒜子网站访问量统计
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 #busuanzi_count:
   # count values only if the other configs are false
@@ -681,7 +681,7 @@ feed插件:`npm install hexo-generator-feed --save`
 ## 自由定制
 ### 文章字数、阅读时长统计
 修改**post.swig**模板
-**模板位置**：themes\next\layout\_macro\post.swig
+**模板位置**：themes\next\layout\\_macro\post.swig
 
 安装hexo-wordcount插件
 ```
@@ -736,7 +736,7 @@ npm install hexo-wordcount --save```
            <span class="post-meta-item-text">阅读时长:</span>
            <span class="post-count">{{ min2read(post.content) }}(分)</span>         
          </span>
-<!--不算子网站访问量统计（主题默认已经添加），如果出现排班错位请忽略，下面用官网的方法实现-->
+<!--不蒜子网站访问量统计（主题默认已经添加），如果出现排班错位请忽略，下面用官网的方法实现-->
           {% if not is_index and theme.busuanzi_count.enable and theme.busuanzi_count.page_pv %}
               &nbsp; | &nbsp;
               <span class="page-pv">{{ theme.busuanzi_count.page_pv_header }}
@@ -748,7 +748,7 @@ npm install hexo-wordcount --save```
 ---
 ### 文章结语
 修改**post.swig**模板
-**模板位置**：themes\next\layout\_macro\post.swig
+**模板位置**：themes\next\layout\\_macro\post.swig
 
 ```
           {% if post.type === 'picture' %}
@@ -781,7 +781,7 @@ npm install hexo-wordcount --save```
 ---
 ### 文章底部的标签云锚点
 修改**post.swig**模板
-**模板位置**：themes\next\layout\_macro\post.swig
+**模板位置**：themes\next\layout\\_macro\post.swig
 
 ```
 <!--这是文章底部标签云锚点，不喜欢就注释掉
@@ -797,9 +797,9 @@ npm install hexo-wordcount --save```
 
 ---
 
-### 不算子网站访问量统计、删除NEXT主题自带尾巴
+### 不蒜子网站访问量统计、删除NEXT主题自带尾巴
 修改**footer.swig**模板
-**模板位置**：themes\next\layout\_partials/footer.swig
+**模板位置**：themes\next\layout\\_partials\footer.swig
 官网：http://service.ibruce.info   
 http://ibruce.info/2015/04/04/busuanzi/
 把代码改成这个样子，`busuanzi_value_site_uv`中，uv和pv功能是不一样的。
@@ -809,7 +809,7 @@ http://ibruce.info/2015/04/04/busuanzi/
 </div>
 
 <div class="theme-info">
-  {{ __('footer.theme') }}<span id="busuanzi_value_site_uv"></span>位访问者
+  {{ __('footer.theme') }}<span id="busuanzi_value_site_uv"></span>位小伙伴
 </div>
 
 <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js">
@@ -819,8 +819,9 @@ http://ibruce.info/2015/04/04/busuanzi/
 编辑：**themes\languages\zh_Hans.yml**
 ```
 footer:
-  powered: <a target="_blank" href="http://www.miitbeian.gov.cn/">粤ICP备16026009号-2</a>
-  theme: 您是本站第```
+  powered: 本站总访问量<span id="busuanzi_value_site_pv"></span>
+  theme: 您是第
+#<a target="_blank" href="http://www.miitbeian.gov.cn/">粤ICP备16026009号-2</a>```
 
 ---
 ### 居中模块
@@ -894,7 +895,7 @@ menu:   #在这里加上
 ---
 ### 打赏
 修改**reward.swig**模板
-**模板位置**：themes\next\layout\_macro\reward.swig
+**模板位置**：themes\next\layout\\_macro\reward.swig
 
 直接全部替换代码，这段代码是圆形的打赏按钮，二维码左右排列。
 ```
@@ -1029,7 +1030,7 @@ https://post.zz173.com/posts/1690090958.html```
 ---
 #### 百度网址推送
 修改**baidu-push.swig**模板
-**模板位置**：themes\next\layout\_scripts\baidu-push.swig
+**模板位置**：themes\next\layout\\_scripts\baidu-push.swig
 没有此文件就新建
 ```
 {% if theme.baidu_push %}
@@ -1184,7 +1185,7 @@ duoshuo_info:
 ---
 ### 动态背景
 修改**_layout.swig**模板
-**模板位置**：themes\next\layout\_layout.swig
+**模板位置**：themes\next\layout\\_layout.swig
 在末尾</body>前加上下面一句
 ```
 <!-- 背景动画 -->
@@ -1196,13 +1197,13 @@ duoshuo_info:
 
 ---
 ### 背景透明
-在 **\themes\next\source\css\_custom\custom.styl** 中写上 `.content-wrap {background: transparent;}`
+在 **\themes\next\source\css\\_custom\custom.styl** 中写上 `.content-wrap {background: transparent;}`
 **custom.styl**文件为用户自定义风格，卸载里面的内容会优先覆盖主题的设定，也可以定义其他的方法等。
 
 ---
 ### 修改文章超链接样式
 将链接文本设置为蓝色，鼠标划过时文字颜色加深，并显示下划线。
-修改 **themes\next\source\css\_custom\custom.styl **，添加如下 `css` 样式（颜色可以自己更改，百度html颜色代码即可找到）：
+修改 **themes\next\source\css\\_custom\custom.styl **，添加如下 `css` 样式（颜色可以自己更改，百度html颜色代码即可找到）：
 
 ```css
 .post-body p a {
@@ -1217,7 +1218,7 @@ duoshuo_info:
 ---
 ### High一下
 修改**header.swig**模板
-**模板位置**：themes\next\layout\_partials\header.swig
+**模板位置**：themes\next\layout\\_partials\header.swig
 在以下代码的结尾换行
 ```css
       {% if hasSearch %}
