--- a/source/_posts/虚拟化/2016-11-03-Docker安装.md
+++ b/source/_posts/虚拟化/2016-11-03-Docker安装.md
@@ -1,5 +1,5 @@
 ---
-title: Docker安装
+title: Docker安装、管理
 categories:
   - 虚拟化
 tags:
@@ -42,7 +42,7 @@ systemctl start docker```
 
 ---
 # Windows
-下载最新exe安装包进行安装。
+下载最新exe安装包进行安装。安装后看能否正常运行Docker，出现闪退，报错等等，先打开virtual虚拟机看虚拟机是否正常，虚拟机报错很可能是3个Windows字体的**.dll**文件被破解了，下载原版替换，**C:\Program Files\Oracle\VirtualBox\drivers\vboxdrv\VBoxDrv.inf**文件右键安装，然后重启。
 ## Windows 10以下
 Boot2docker：
 https://github.com/boot2docker/windows-installer/releases
@@ -148,5 +148,15 @@ brew link boot2docker```
 参数：**{help|init|up|ssh|save|down|poweroff|reset|restart|config|status|info|ip|delete**
 **|download|version} **
 
+---
+# 用cSphere希云管理Docker
+## cSphere希云
+安装：
+http://csphere.cn/product/csphere
+http://csphere.cn/hub/csphere
+
+微镜像：http://csphere.cn/hub
+
+教程：http://csphere.cn/training
 
 ---
