--- a/source/_posts/系统管理/2016-11-02-Linux内核升级.md
+++ b/source/_posts/系统管理/2016-11-02-Linux内核升级.md
@@ -9,16 +9,17 @@ date: 2016-11-02 21:58:39
 ---
 
 # 内核升级：
-【内核版本 https://www.kernel.org/】
+内核版本 **https://www.kernel.org**
 参考：http://blog.csdn.net/taiyang1987912/article/details/42744019
 ```
 yum install ncurses-devel -y
 yum install hmaccalc zlib-devel binutils-devel elfutils-libelf-devel -y
-wget  https://www.kernel.org/pub/linux/kernel/v3.x/linux-3.10.28.tar.xz     
+wget https://www.kernel.org/pub/linux/kernel/v3.x/linux-3.10.28.tar.xz     
 tar -xf linux-3.10.28.tar.xz
 mv linux-3.10.28 /usr/src/
 cd /usr/src/linux-3.10.28/
 cp /boot/config-2.6.32-573.el6.x86_64 .config
+#把旧内核(uname -r)的config复制到当前目录备用
 sh -c 'yes "" | make oldconfig'
 make oldconfig```
 
