--- a/themes/next5.1/languages/zh-Hans.yml
+++ b/themes/next5.1/languages/zh-Hans.yml
@@ -37,9 +37,9 @@ page:
   tags: 标签
 
 footer:
-  powered: <a target="_blank" href="http://www.miitbeian.gov.cn/">粤ICP备16026009号-2</a>
-  theme: 您是本站第
-
+  powered: 本站总访问量<span id="busuanzi_value_site_pv"></span>
+  theme: 您是第
+#<a target="_blank" href="http://www.miitbeian.gov.cn/">粤ICP备16026009号-2</a>
 
 counter:
   tag_cloud:
