--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -92,7 +92,7 @@ Python 练手：https://www.zhihu.com/question/29372574
 
 京峰免费shell课程：http://v.jfedu.net/web/course/2
 github年度shell：https://www.zhihu.com/question/28182203
-
+Shell教程：http://c.biancheng.net/cpp/shell/
 
 
 
@@ -111,6 +111,7 @@ SVN：
 
 ---
 # 别人的博客
+优秀Coding博客分享：https://coding.net/u/coding/p/awesome-blogs/git
 http://www.arao.me
 http://www.ilanni.com
 http://iwanli.me
