--- a/source/_posts/环境搭建/2016-11-10-GitLab服务器搭建.md
+++ b/source/_posts/环境搭建/2016-11-10-GitLab服务器搭建.md
@@ -9,12 +9,18 @@ abbrlink: 22149
 date: 2016-11-10 15:57:58
 ---
 
+---
+**[一键安装 gitlab并设置邮件发送](http://lib.csdn.net/article/git/47824)**(简单教程)
+
+
+
+---
 本节是根据[烂泥大神](http://www.ilanni.com/)分享的笔记摘录的！
 
 # 安装 GitLab
 GitLab   下载：http://www.gitlab.cc/downloads/
 GitLab 中文文档：http://doc.gitlab.cc
-安装方式官方有详细说明，这里使用Centos 6安装，其他系统参考官方文档，一部到位。
+安装方式官方有详细说明，这里使用Centos 6安装，其他系统参考官方文档。
 
 ```
 #切换到root用户登录
@@ -157,6 +163,7 @@ external_url 'http://your.domain'```
 /var/opt/gitlab/nginx
 /var/opt/gitlab/nginx/conf/nginx.conf
 /var/opt/gitlab/nginx/conf/gitlab-http.conf
+
 
 ---
 # 汉化
