--- a/source/_posts/系统管理/2016-11-02-Linux内核升级.md
+++ b/source/_posts/系统管理/2016-11-02-Linux内核升级.md
@@ -8,7 +8,65 @@ abbrlink: 27726
 date: 2016-11-02 21:58:39
 ---
 
-# 内核升级：
+# yum方式升级内核
+官网：http://elrepo.org/tiki/tiki-index.php
+
+1.查看系统情况
+`cat /etc/issue`  查看系统版本
+`uname -r `       查看内核版本
+
+2.安装key
+```
+rpm --import https://www.elrepo.org/RPM-GPG-KEY-elrepo.org```
+![](http://ofyfogrgx.bkt.clouddn.com//blog/Linux%E5%86%85%E6%A0%B8%E5%8D%87%E7%BA%A7111.png)
+
+3.安装yum源（根据你的系统版本选择）
+
+* 7系列
+```
+rpm -Uvh http://www.elrepo.org/elrepo-release-7.0-2.el7.elrepo.noarch.rpm```
+
+
+* 6系列
+```
+rpm -Uvh http://www.elrepo.org/elrepo-release-6-6.el6.elrepo.noarch.rpm```
+
+* 5系列
+```
+rpm -Uvh http://www.elrepo.org/elrepo-release-5-5.el5.elrepo.noarch.rpm```
+
+4.安装内核
+
+* ml内核（mainline，安装的是最新版的内核）
+如果要安装ml内核，使用如下命令：
+```
+yum --enablerepo=elrepo-kernel install kernel-ml -y```
+
+* lt内核（long-term，长期支持版，不是最新版）
+如果要安装lt内核，使用如下命令：
+```
+yum --enablerepo=elrepo-kernel install kernel-lt -y```
+
+我安装的是ml内核，如下：
+![](http://ofyfogrgx.bkt.clouddn.com//blog/Linux%E5%86%85%E6%A0%B8%E5%8D%87%E7%BA%A7112.png)
+
+5.修改grub
+```
+vim /etc/grub.conf```
+新安装的内核排在了第一项，所以改为**default=0**，若排在第二个title下则为1，以此类推。
+![](http://ofyfogrgx.bkt.clouddn.com//blog/Linux%E5%86%85%E6%A0%B8%E5%8D%87%E7%BA%A7113.png)
+
+注：一般centos6以下都是用grub引导的，如果有需求的话可以升级到gurb2
+进入/boot删除老的内核(对应的**initramfs\*.img**，**initrd\*.img**，**vmlinuz**文件)，删除**/etc/grub.conf**文件对应的段落，并重新生成grub文件。
+```
+grub2-mkconfig -o /boot/grub2/grub.cfg #生成grub2的配置文件```
+如果没有**grub2-mkconfig**命令时,先安装`yum install grub2-tools`
+
+之后重启验证即可。
+
+
+---
+# 源码编译升级（适合所有Linux）
 内核版本 **https://www.kernel.org**
 参考：http://blog.csdn.net/taiyang1987912/article/details/42744019
 ```
