--- a/source/_posts/环境搭建/2016-11-19-Tomcat.md
+++ b/source/_posts/环境搭建/2016-11-19-Tomcat.md
@@ -10,7 +10,7 @@ date: 2016-11-19 21:33:42
 
 # 安装tomcat
 需要有JDK环境。系统中已安装gcc、automake等编译工具。
-参考：[java jdk环境搭建](www.leolan.top/posts/59/)
+参考：[java jdk环境搭建](http://www.leolan.top/posts/59/)
 
 tomcat官网下载：http://tomcat.apache.org/download-90.cgi
 
