--- a/source/_posts/环境搭建/2016-11-19-Tomcat.md
+++ b/source/_posts/环境搭建/2016-11-19-Tomcat.md
@@ -125,3 +125,25 @@ export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.111-0.b15.el6_8.x86_64
 关于catalina.sh启动文件，参考：[catalina.sh详解](http://www.cnblogs.com/huzhiwei/archive/2012/03/13/2393393.html)
 
 ---
+如果想再创建一个tomcat服务，只需要将/usr/local/tomcat这个目录复制一份，例如：
+```
+cp /usr/local/tomcat /usr/local/tomcat1```
+
+再修改一下tomcat1的端口号(**/usr/local/tomcat/opt/tomcat1/conf/server.xml**中的端口号不能与其它的服务重复)。最后从上面所述"**设置环境变量**"开始，一直往下，设置新用户，创建用户，修改权限，设置防火墙，新建服务tomcat1，设置开机自启，就OK啦。
+通过这种方式，您就可以为一台Linux服务器创建任意多个tomcat服务了。最后只需要安装一个前端服务器（例如Nginx或Apache），将不同域名的请求转发到不同的tomcat服务程序就可以了。
+
+参考：
+
+[Linux下Apache与多个Tomcat 集群负载均衡](http://www.linuxidc.com/Linux/2012-01/51731.htm)
+
+[Nginx Tomcat 集群负载均衡解决笔记](http://www.linuxidc.com/Linux/2013-07/86827.htm)
+
+[Tomcat组件安装+Nginx反向代理Tomcat+Apache使用mod_jk和mod_proxy反向代理和负载均衡](http://www.linuxidc.com/Linux/2013-06/85290.htm)
+
+---
+
+
+
+
+
+
