--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -108,6 +108,10 @@ Git知识：http://lib.csdn.net/base/git
 SVN：
 
 
+**web**
+nginx中文文档：http://www.nginx.cn/doc/index.html
+
+
 
 ---
 # 别人的博客
@@ -129,7 +133,7 @@ http://willxue.top
 http://zhishuo.info
 http://notes.iissnan.com
 http://blog.tangxiaozhu.com/p/45374067/
-
+http://www.tennfy.com/    VPS
 
 ---
 
