--- a/source/_posts/环境搭建/2016-11-17-Mac常用工具-技巧.md
+++ b/source/_posts/环境搭建/2016-11-17-Mac常用工具-技巧.md
@@ -12,6 +12,9 @@ abbrlink: 2336
 date: 2016-11-17 15:17:05
 ---
 
+# 工具
+
+
 **Git-osx-install**：https://sourceforge.net/projects/git-osx-installer/
 
 ---
@@ -51,5 +54,40 @@ cd autojump_v21.1.2
 `vim ~/.zshrc`加入以下这句
 ```
 [[ -s ~/.autojump/etc/profile.d/autojump.sh ]] && . ~/.autojump/etc/profile.d/autojump.sh```
+
+
 ---
+# 技巧
+
+## ssh远程连接突然连接不了
+在重装了远程主机（云主机）系统之后，即使有免密钥登录也会失败。出现类似如下的提示：
+```
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  
+@    WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!     @  
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@  
+IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!  
+Someone could be eavesdropping on you right now (man-in-the-middle attack)!  
+It is also possible that a host key has just been changed.  
+The fingerprint for the RSA key sent by the remote host is  
+07:36:8e:d0:72:88:38:f7:21:10:c3:12:d6:35:ad:55.  
+Please contact your system administrator.  
+Add correct host key in /Users/watsy/.ssh/known_hosts to get rid of this message.  
+Offending RSA key in /Users/watsy/.ssh/known_hosts:1  
+RSA host key for 192.168.2.108 has changed and you have requested strict checking.  
+Host key verification failed.  ```
+这时只要执行`rm -rf ~/.ssh/known_hosts`删除记录主机信息的文件就可以重新连接了。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
