--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -69,6 +69,19 @@ WordPress  https://cn.wordpress.org
 Z-Blog     https://www.zblogcn.com
 Emlog      http://www.emlog.net
 
+# 持续集成
+jenkins       http://www.jenkins.io/
+walle(瓦力)   http://www.walle-web.io/
+CheungSSH     http://www.oschina.net/p/cheungssh
+
+# 批量安装Linux之搭建服务器
+http://www.centoscn.com/image-text/setup/2015/0126/4564.html
+http://www.centoscn.com/image-text/setup/2014/0912/3720.html
+
+https://my.oschina.net/alanlqc/blog/147047
+
+
+
 
 ---
 # 学习、技能
