--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -1087,7 +1087,7 @@ plugins:
 
 
 ---
-### 页面留白
+### 页面留白(扩大显示范围)
 浏览器留白太多，代码块看起来比较麻烦，想让更多空间显示文章。
 NexT 对于内容的宽度的设定如下：
 700px，当屏幕宽度 < 1600px
@@ -1096,9 +1096,9 @@ NexT 对于内容的宽度的设定如下：
 
 如果你需要修改内容的宽度，同样需要编辑样式文件。 编辑主题的 **source/css/_variables/custom.styl** 文件，新增变量：
 ```
-// 修改成你期望的宽度
+// 修改成你期望的宽度，默认700px
 $content-desktop = 700px
-// 当视窗超过 1600px 后的宽度
+// 当视窗超过 1600px 后的宽度，默认900px
 $content-desktop-large = 900px```
 
 如果主题风格选择的是**Pisces**；那么同时还要修改**header** 的宽度、**.main-inner **的宽度以及 **.content-wrap **的宽度(如果没什么问题可以不修改custom.styl文件)。
