--- a/source/_posts/环境搭建/2016-11-08-用Jekyll搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Jekyll搭建博客.md
@@ -287,7 +287,7 @@ Github Pages生成网站的两种方式的基本原理
 * 建立名为 username.github.io 的项目，在 master 分支下存放网站源代码
 * 建立名为 blog 的项目，在 gh-pages 分支下存放网站源代码
 考虑到第一种项目名复杂不方便同步等，这里用第二种方法，方便管理。
-新建一个仓库，名称随意，ReadMe.md文件随意，不懂的查看教程第4节“创建远程仓库”：[git教程](http://leolan.top/2016/11/04/Dev-2016-11-04-Git%E6%95%99%E7%A8%8B/)
+新建一个仓库，名称随意，ReadMe.md文件随意，不懂的查看教程第4节“创建远程仓库”：[git教程](https://www.leolan.top/posts/41310/)
 
 ![](http://ofyfogrgx.bkt.clouddn.com//blog/%E7%94%A8Jekyll%E6%90%AD%E5%BB%BA%E5%8D%9A%E5%AE%A204.png)
 翻到下面，选择**Launch automatic page generator**
