--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -94,7 +94,7 @@ https://my.oschina.net/alanlqc/blog/147047
 **HTML**：
 
 W3school：http://www.w3school.com.cn/index.html
-
+http协议：http://www.kancloud.cn/kancloud/tealeaf-http
 
 
 **Python**：
