--- a/source/_posts/环境搭建/2016-11-17-Mac常用工具-技巧.md
+++ b/source/_posts/环境搭建/2016-11-17-Mac常用工具-技巧.md
@@ -37,6 +37,7 @@ brew install wget```
 ```
 wget --no-check-certificate https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh```
 重新打开终端就好了。
+卸载：`uninstall_oh_my_zsh`
 
 [终极 Shell——ZSH](https://zhuanlan.zhihu.com/p/19556676?columnSlug=mactalk)
 
