--- a/source/_posts/Dev/2016-11-04-Git教程.md
+++ b/source/_posts/Dev/2016-11-04-Git教程.md
@@ -25,8 +25,8 @@ date: 2016-11-04 14:03:40
 # Git配置
 `ls -a`	或 `ls -ah`	方便查看隐藏文件
 执行`git config`命令就是调用此文件
-`/etc/gitconfig `       全部用户生效 --system调用的文件
-`～/.gitcinfig   `      当前用户有效 --global调用的文件
+`/etc/gitconfig `       全部用户生效 \--system调用的文件
+`～/.gitcinfig   `      当前用户有效 \--global调用的文件
 `.git/config  `         当前项目的配置文件
 **.git/config**的配置会覆盖**/etc/gitconfig** 中的同名变量。
 win中配置文件一般在主目录下的对应用户文件夹里**C:\Documents and Settings\$USER**
@@ -129,8 +129,8 @@ origin  git@github.com:myleolan/learngit.git (push)```
 
 删除远程仓库：`git remote rm ［别名或仓库名］`
 
-* pull：本地 <-- 远程   (如果你本地落后远程，必然要pull)
-* push：本地 --> 远程  (如果你本地超前远程，必然要push)
+* pull：本地 <\-- 远程   (如果你本地落后远程，必然要pull)
+* push：本地 \--> 远程  (如果你本地超前远程，必然要push)
 
 本质上都是同步commit
 
@@ -404,7 +404,7 @@ Creating a new branch is quick AND simple.
 **Git用<<<<<<<，=======，>>>>>>>标记出不同分支的内容。**
 
 用带参数的git log也可以看到分支的合并情况：`git log --graph --pretty=oneline --abbrev-commit`
-用git log --graph命令可以看到分支合并图。
+用git log \--graph命令可以看到分支合并图。
 
 详见：[廖雪峰Git解决冲突](http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000/001375840202368c74be33fbd884e71b570f2cc3c0d1dcf000)
 
@@ -425,7 +425,7 @@ Creating a new branch is quick AND simple.
 *  5.error: failed to push some refs to 'git@github.com:myleolan/learnpython.git'
 To prevent you from losing history, non-fast-forward updates were rejected
 Merge the remote changes before pushing again.  See the 'Note about
-fast-forwards' section of 'git push --help' for details.
+fast-forwards' section of 'git push \--help' for details.
 答：是因为远程用web创建的的库和本地不一样。`git pull origin master` (先pull 下来 再push 上去)
 
 *  6.git push时报错：The requested URL returned error: 403 Forbidden while accessing
