--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -86,7 +86,7 @@ https://my.oschina.net/alanlqc/blog/147047
 购买链接：https://bwh1.net/vps-hosting.php
 其他教程：http://www.tennfy.com/2083.html
 
-
+XX-Net:https://github.com/XX-net/XX-Net
 
 
 ---
