增加群晖文章

--- a/source/_posts/系统管理/2016-11-25-Linux常用命令.md
+++ b/source/_posts/系统管理/2016-11-25-Linux常用命令.md
@@ -110,6 +110,7 @@ crontab -e                    #编辑配置文件
 注：**tzselect** 命令也可以交互界面选择修改，但最后还要执行一个提示设置时区的命令，并写入环境变量中，重启才能生效。
 
 ---
+
 ---
 # 文件、目录类
 ## cd
@@ -157,6 +158,7 @@ sz  下载文件
 
 
 ---
+
 ---
 # 网络类
 
@@ -184,8 +186,28 @@ axel -n 10 -o /tmp/ http://www.linuxde.net/lnmp.tar.gz```
 ---
 ## 监听流量              
 ### iftop
-`iftop -i eth0 -n -p`
+官方网站：http://www.ex-parrot.com/~pdw/iftop/
+安装：
+**源码安装**：
+```
+yum install flex byacc  libpcap ncurses ncurses-devel libpcap-devel  #安装依赖
+或
+apt-get install flex byacc  libpcap0.8 libncurses5   #安装依赖
 
+#编译之前确保已安装好了make、gcc、autoconf等。
+wget http://www.ex-parrot.com/pdw/iftop/download/iftop-0.17.tar.gz
+tar zxvf iftop-0.17.tar.gz
+cd iftop-0.17
+./configure
+make && make install```
+
+**仓库源安装**：
+Debian/Ubuntu系统：`apt-get install iftop`
+Centos/Redhat系统：[安装EPEL源](https://www.vpser.net/manage/centos-rhel-linux-third-party-source-epel.html)，然后`yum install iftop`安装
+
+**使用**：`iftop`或`iftop -i eth0 -n -p`
+
+---
 ### nethogs
 `nethogs eth0`
 
