修改主题配置

--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -377,13 +377,16 @@ font:
 #   Map a menu item to a specific FontAwesome icon name.
 #   Key is the name of the item and value is the name of FontAwsome icon. Key is case-senstive.
 #   When an globe mask icon presenting up means that the item has no mapping icon.
-social_icons:
+social_icons:    #这是社交链接图标，打开网站找到图标，直接引用名字就行，next已引用了该库http://fontawesome.io/icons/
   enable: true
   # Icon Mappings.
   # KeyMapsToSocalItemKey: NameOfTheIconFromFontAwesome
   GitHub: github
-  Twitter: twitter
-  Weibo: weibo
+  Coding: github-alt
+  Cloud: cloud
+  OSchina: git-square
+  #Twitter: twitter
+  #Weibo: weibo
 
 
 # Sidebar Avatar
@@ -1263,7 +1266,10 @@ duoshuo_info:
 在末尾</body>前加上下面一句
 ```
 <!-- 背景动画 -->
-<script type="text/javascript" src="/js/src/particle.js"></script>```
+#默认灰色线条
+<script type="text/javascript" src="/js/src/particle.js"></script>
+#浅蓝色线条
+<script type="text/javascript" src="/js/src/particle.js" count="50" zindex="-2" opacity="1" color="0,104,183"></script>```
 在themes\source\js\src\下新建文件particle.js写上以下代码（也可以自己下载其他js,修改方式差不多）
 ```js
 !function(){function n(n,e,t){return n.getAttribute(e)||t}function e(n){return document.getElementsByTagName(n)}function t(){var t=e("script"),o=t.length,i=t[o-1];return{l:o,z:n(i,"zIndex",-1),o:n(i,"opacity",.5),c:n(i,"color","0,0,0"),n:n(i,"count",99)}}function o(){c=u.width=window.innerWidth||document.documentElement.clientWidth||document.body.clientWidth,a=u.height=window.innerHeight||document.documentElement.clientHeight||document.body.clientHeight}function i(){l.clearRect(0,0,c,a);var n,e,t,o,u,d,x=[w].concat(y);y.forEach(function(i){for(i.x+=i.xa,i.y+=i.ya,i.xa*=i.x>c||i.x<0?-1:1,i.ya*=i.y>a||i.y<0?-1:1,l.fillRect(i.x-.5,i.y-.5,1,1),e=0;e<x.length;e++)n=x[e],i!==n&&null!==n.x&&null!==n.y&&(o=i.x-n.x,u=i.y-n.y,d=o*o+u*u,d<n.max&&(n===w&&d>=n.max/2&&(i.x-=.03*o,i.y-=.03*u),t=(n.max-d)/n.max,l.beginPath(),l.lineWidth=t/2,l.strokeStyle="rgba("+m.c+","+(t+.2)+")",l.moveTo(i.x,i.y),l.lineTo(n.x,n.y),l.stroke()));x.splice(x.indexOf(i),1)}),r(i)}var c,a,u=document.createElement("canvas"),m=t(),d="c_n"+m.l,l=u.getContext("2d"),r=window.requestAnimationFrame||window.webkitRequestAnimationFrame||window.mozRequestAnimationFrame||window.oRequestAnimationFrame||window.msRequestAnimationFrame||function(n){window.setTimeout(n,1e3/45)},x=Math.random,w={x:null,y:null,max:2e4};u.id=d,u.style.cssText="position:fixed;top:0;left:0;z-index:"+m.z+";opacity:"+m.o,e("body")[0].appendChild(u),o(),window.onresize=o,window.onmousemove=function(n){n=n||window.event,w.x=n.clientX,w.y=n.clientY},window.onmouseout=function(){w.x=null,w.y=null};for(var y=[],s=0;m.n>s;s++){var f=x()*c,h=x()*a,g=2*x()-1,p=2*x()-1;y.push({x:f,y:h,xa:g,ya:p,max:6e3})}setTimeout(function(){i()},100)}();
@@ -1273,6 +1279,14 @@ duoshuo_info:
 ### 背景透明
 在 **\themes\next\source\css\\_custom\custom.styl** 中写上 `.content-wrap {background: transparent;}`
 **custom.styl**文件为用户自定义风格，卸载里面的内容会优先覆盖主题的设定，也可以定义其他的方法等。
+
+---
+### 背景放图片
+首先找到一个背景图片放到 \themes\next\source\images下；
+修改themes\next\source\css\_schemes\Pisces（Mist和Muse也行）\index.styl文件，
+在文件的最上方加上一代码 
+```
+body { background:url(/images/backGround.jpg);} ```
 
 ---
 ### 修改文章超链接样式
@@ -1714,6 +1728,15 @@ duoshuo_info:
          <!-- end High一下 -->
         {% endif %}```
 
+如果需要并排显示，像这样子：![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161205/154359849.png)
+修改文件：**\themes\source\css\_schemes\Pisces（主题风格对应的文件夹）\_sidebar.styl**
+找到这样一段，把**display: block;**改为**display: inline-block;**
+```
+.feed-link a {
+  display: inline-block;   //并行显示，block则为分行显示
+  color: $orange;
+  border: none;```
+
 ---
 ### 给 Github 添加 README
 默认情况下，Github中每一个项目，我们希望有一份**README.md**的文件来作为项目的说明，但是我们在项目根目录下的`blog\source`目录下创建一份**README.md**文件，写好说明介绍，部署的时候，这个**README.md**会被hexo解析掉，而不会被解析到Github中去的。
@@ -1725,6 +1748,10 @@ duoshuo_info:
 skip_render:
     - README.md
 ```
+
+---
+### 加入左上角「fork me on github」
+[github官方教程](https://github.com/blog/273-github-ribbons)
 
 ---
 ### 给 Blog 添加 LICENSE
