--- a/source/_posts/2016-12-06-博客中插入音乐-视频.md
+++ b/source/_posts/2016-12-06-博客中插入音乐-视频.md
@@ -13,13 +13,42 @@ keywords: 博客中插入音乐、视频
 本文是参考Raintons的博文写的。感谢Raintons的文章。
 
 # Markdown 通用插入方法
+Markdown 作为轻量级的标记语言，兼容 html 语法，所以可以直接在 Markdown 文档中使用 html 语法。
+大部分音乐、视频网站都可以直接生成播放器代码(尽量用直接生成的代码)，直接粘贴到 Markdown 文档中即可。有些标签不支持 https，尽量选支持https的网站，因为**https网站加载http资源会被屏蔽掉，简单的在http地址后加个s测试即可知道是否支持https** 。
 
 
+**Html居中代码**：
+`<center>我是内容，替换我</center>`
+或`<blockquote class="blockquote-center">我是内容，替换我</blockquote>`
 
 
+## 视频：
+```
+<video width="480" height="320" controls>
+<source src="movie.mp4">
+</video>```
+
+下面无耻的引用Raintons博文中的地址，经测试不支持内嵌优酷之类的flash播放，**src**后面的地址要指向视频文件。**width**和**height**最好填写好对应视频的大小，不然周围有边框不好看。视频居中要用`<blockquote class="blockquote-center">我是内容，替换我</blockquote>`才行。
+<blockquote class="blockquote-center">
+<video width="480" height="482" controls>
+<source src="http://mvvideo2.meitudata.com/56ea1220d2ca92407.mp4">
+</video>
+</blockquote>
+
+网站生成代码，点分享即可生成播放代码。
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161206/173516104.png)
+<iframe height=498 width=510 src='http://player.youku.com/embed/XNjIyMjY4MjM2' frameborder=0 'allowfullscreen'></iframe>
+
+---
+## 音频：
+音频分享和视频分享是一样的，也能生成外链播放器代码（有多种标签自由选择），只有网易云音乐是单独有生成按钮的。
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161206/164604641.png)
+<center>
+<embed src="//music.163.com/style/swf/widget.swf?sid=450980312&type=0&auto=1&width=310&height=430" width="330" height="450"  allowNetworking="all"></embed>
+</center>
 
 
-
+---
 # dplayer插件插入
 
 
