--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -94,6 +94,9 @@ https://www.dou-bi.co
 # Docker
 Docker平台：https://www.daocloud.io
 
+---
+# Python生成二维码
+艺术二维码：https://github.com/sylnsfar/qrcode
 
 ---
 # 学习、技能
