--- a/source/_posts/环境搭建/2016-11-08-用Jekyll搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Jekyll搭建博客.md
@@ -339,9 +339,9 @@ gem 'github-pages', group: :jekyll_plugins```
 ---
 
 # 绑定域名
-原理和博客绑定域名是一样的
+原理是域名提供商的域名指向github或coding的域名服务器，在项目内建立CNAME的域名指向文件后，会自动去自己的域名服务器github或coding上查找该域名，找到啦就绑定在一起，找不到就绑定不了；如果绑定不了，那么域名指向的github和coding（Pages绑定域名时）服务器会报404错误；域名指向的coding（Pages页面没有绑定域名时）域名服务器会把index当做普通超文本解析，不会加载js、cs等资源。
 
-* 1· 在你的项目下新建一个**CNAME**文件，注意没有后缀名。在里面添加你的域名，如我的就是** leolan.top**，然后推送**CNAME文件**到远程仓库。（方法二是直接在pages页上找到域名绑定设置，最好同时绑定如：**leolan.top**和**www.leolan.top**,少绑一个，没绑的那个打不开）
+* 1· 在你的项目下新建一个**CNAME**文件，注意没有后缀名。在里面添加你的域名，一行一个，如我的就是** www.leolan.top**和** leolan.top**（github会自动绑定第一个，第二个也要绑定，不绑定访问报404错误），然后推送**CNAME文件**到远程仓库。（Github不建议在pages页上绑定设置，页面上是只能绑定一个的）；Coding的话要在**CNAME文件**里绑定两个，在Pages页面也绑定两个。
 * 2· 到域名服务商那里增加你的CNAME记录。添加两条记录，@和www的主机记录，记录类型为CNAME，记录值为 `username.github.io. `，重要的是 io 后面还有一个原点（看官方帮助文档Coding的就不用加点），切记。
 ![](http://ofyfogrgx.bkt.clouddn.com//blog/%E5%9F%9F%E5%90%8D%E7%BB%91%E5%AE%9A.png)
 过几分钟，刷新网页，就能直接用域名访问了，因为是在项目内建的**CNAME**文件，所以域名直接指向此项目文件夹，其他项目可以用其他域名设定。
