--- a/source/_posts/系统管理/2016-11-25-Linux常用命令.md
+++ b/source/_posts/系统管理/2016-11-25-Linux常用命令.md
@@ -157,7 +157,27 @@ crontab -e                    #编辑配置文件
 
 **文件名**：以空格分开的要改变权限的文件列表，支持通配符。
 
+---
+## 查找近期修改的文件
+比如按名字查找一个文件，可以用`find / -name filename`  
+按时间查找也有参数
+* **-atime** 访问时间
+* **-ctime** 改变状态的时间
+* **-mtime**修改的时间。
+这里的时间是以24小时为单位的。
 
+`find . -name '*.html' -type f -mmin -30`：当前目录最近30分钟内修改过的html文件
+`find . -name '*.html' -type f -mmin -30 -ls`：最近30分钟内修改过的文件，的详细情况
+`find ./ -mtime 0`：返回最近24小时内修改过的文件。
+`find ./ -mtime 1` ： 返回的是前48~24小时修改过的文件。而不是48小时以内修改过的文件。
+`find . -type f -mtime +1`：最近1天前（2天内）修改过的常规文件
+`find . -mtime -2 -type f`：48小时以内修改过的文件
+
+那怎么返回10天内修改过的文件？find支持表达式关系运算，所以可以把最近几天的数据一天天的加起来：
+`find ./ -mtime 0 -o -mtime 1 -o -mtime 2` 虽然比较土，但也算是个方法了。
+
+
+参考：http://man.linuxde.net/find
 
 
 ---
