--- a/source/_posts/杂项/2016-11-25-操作系统常用配置设置.md
+++ b/source/_posts/杂项/2016-11-25-操作系统常用配置设置.md
@@ -38,8 +38,11 @@ sudo service ssh restart
 
 ---
 # Centos
+## Docker Centos修改密码出错
+CentOS 修改root密码时报错：
+/usr/share/cracklib/pw_dict.pwd: No such file or directory PWOpen: No such file or directory 
 
-
+这是因为缺少某些lib库。解决办法：`yum reinstall -y cracklib-dicts`
 
 
 
