--- a/source/_posts/系统管理/2016-11-25-Linux常用命令.md
+++ b/source/_posts/系统管理/2016-11-25-Linux常用命令.md
@@ -44,6 +44,14 @@ crontab -e                    #编辑配置文件
 **正斜线（/）**：可以用正斜线指定时间的间隔频率，例如“0-23/2”表示每两小时执行一次。同时正斜线可以和星号一起使用，例如*/10，如果用在minute字段，表示每十分钟执行一次。
 
 ---
+## 命令执行
+顺序执行多条命令可以用`;`来隔开**（即使前面一条命令没有正确执行，后面的命令也会执行）**
+
+`&&`实现选择性执行的，它**表示如果前面的命令执行结果返回0(前一条命令正确执行)，才执行后面的，否则不执行**（不是表示终端输出的内容，而是表示命令执行状态的结果），用`echo $?`环境变量可以查看上一次命令的执行结果。
+
+shell中的`||`除了用于表示逻辑与和或之外，还可以实现命令执行顺序的简单控制。`||`是与`&&`相反的控制效果，当上一条命令执行结果为**≠0($?≠0)**时(上一条命令执行失败)，则执行它后面的命令。
+
+---
 ## 后台运行命令
 
 * 1.`screen [command]`
@@ -158,6 +166,24 @@ crontab -e                    #编辑配置文件
 **文件名**：以空格分开的要改变权限的文件列表，支持通配符。
 
 ---
+## CUT命令
+* -b：仅显示行中指定直接范围的内容； 
+* -c：仅显示行中指定范围的字符；
+* -d：指定字段的分隔符，默认的字段分隔符为“TAB”； 
+* -f：显示指定字段的内容； 
+* -n：与“-b”选项连用，不分割多字节字符； 
+* \--complement：补足被选择的字节、字符或字段； 
+* \--out-delimiter=<字段分隔符>：指定输出内容是的字段分割符； 
+* \--help：显示指令的帮助信息； 
+* \--version：显示指令的版本信息。
+
+打印/etc/passwd文件中以**:**为分隔符的第1个字段和第6个字段分别表示用户名和其家目录：`cut /etc/passwd -d ':' -f 1,6`
+前五个（包含第五个）：`cut /etc/passwd -c -5`
+前五个之后的（包含第五个）：`cut /etc/passwd -c 5-`
+第五个：`cut /etc/passwd -c 5`
+2到5之间的（包含第五个）： `cut /etc/passwd -c 2-5`
+
+---
 ## 查找近期修改的文件
 比如按名字查找一个文件，可以用`find / -name filename`  
 按时间查找也有参数
@@ -216,6 +242,211 @@ sz  下载文件
 * **grep -v 'grep'**  过滤带grep的部分 取反
 * **wc -l **          统计行数
 * **sort -nr **       排序
+
+---
+`grep -rnI "myleolan" ~`
+
+* -r 参数表示递归搜索子目录中的文件,
+* -n表示打印匹配项行号，
+* -I表示忽略二进制文件。
+查看环境变量中以"leolan"结尾的字符串：`export | grep ".*leolan$"`
+其中`$`就表示一行的末尾。
+
+---
+**wc** 命令用于统计并输出一个文件中行、单词和字节的数目
+分别只输出行数、单词数、字节数、字符数和输入文本中最长一行的字节数：
+行数：`wc -l /etc/passwd`
+单词数：`wc -w /etc/passwd`
+字节数：`wc -c /etc/passwd`
+字符数：`wc -m /etc/passwd`
+最长行字节数：`wc -L /etc/passwd`
+
+注意：对于西文字符来说，一个字符就是一个字节，但对于中文字符一个汉字是大于2个字节的，具体数目是由字符编码决定的
+
+---
+**sort **排序命令
+将输入按照一定方式排序，然后再输出,它支持的排序有按字典排序,数字排序，按月份排序，随机排序，反转排序，指定特定字段进行排序等等。
+默认为字典排序：`cat /etc/passswd | sort`
+反转排序：`cat /etc/passwd | sort -r`
+按特定字段排序：`cat /etc/passwd | sort -t':' -k 3 -n`
+
+上面的**-t**参数用于指定字段的分隔符，这里是以**":"**作为分隔符；
+**-k** 字段号用于指定对哪一个字段进行排序。这里/etc/passwd文件的第三个字段为数字，默认情况下是一字典序排序的，如果要按照数字排序就要加上**-n**参数
+
+---
+**uniq** 去重命令
+uniq命令可以用于过滤或者输出重复行。
+  ● 过滤重复行
+我们可以使用**history**命令查看最近执行过的命令（实际为读取**${SHELL}_history**文件），那么你可能就会要想去掉命令后面的参数然后去掉重复的命令：`history | cut -c 8- | cut -d ' ' -f 1 | uniq`
+
+然后经过层层过滤，你会发现确是只输出了执行的命令那一列，不过去重效果好像不明显，仔细看你会发现它趋势去重了，只是不那么明显，之所以不明显是因为uniq命令只能去连续重复的行，不是全文去重，所以要达到预期效果，我们先排序：
+`history | cut -c 8- | cut -d ' ' -f 1 | sort | uniq`
+或者`history | cut -c 8- | cut -d ' ' -f 1 | sort -u`
+
+  ● 输出重复行
+输出重复过的行（重复的只输出一个）及重复次数：
+`history | cut -c 8- | cut -d ' ' -f 1 | sort | uniq -dc`
+输出所有重复的行：
+`history | cut -c 8- | cut -d ' ' -f 1 | sort | uniq -D`
+
+---
+**tr** 命令
+tr 命令可以用来删除一段文本信息中的某些文字。或者将其进行转换。
+常用的选项有：
+
+|选项|说明|
+|---|---|
+|-d|删除和set1匹配的字符，注意不是全词匹配也不是按字符顺序匹配|
+|-s|去除set1指定的在输入文本中连续并重复的字符|
+
+删除 "hello shiyanlou" 中所有的'o','l','h'：`echo 'hello shiyanlou' | tr -d 'olh'`
+将"hello" 中的ll,去重为一个l：`echo 'hello' | tr -s 'l'`
+将输入文本，全部转换为大写或小写输出：`cat /etc/passwd | tr '[:lower:]' '[:upper:]'`
+上面的`'[:lower:]'` `'[:upper:]'`你也可以简单的写作`'[a-z]'` `'[A-Z]'`,当然反过来将大写变小写也是可以的
+
+---
+**col **命令
+col 命令可以将Tab换成对等数量的空格建，或反转这个操作。
+常用的选项有：
+
+|选项|说明|
+|---|---|
+|-x|将Tab转换为空格|
+|-h|将空格转换为Tab（默认选项）|
+
+操作举例：
+查看 /etc/protocols 中的不可见字符，可以看到很多 ^I ，这其实就是 Tab 转义成可见字符的符号:
+`cat -A /etc/protocols`
+使用 col -x 将 /etc/protocols 中的 Tab 转换为空格,然后再使用 cat 查看，你发现 ^I 不见了:
+`cat /etc/protocols | col -x | cat -A`
+
+---
+**join**命令
+学过数据库的用户对这个应该不会陌生，这个命令就是用于将两个文件中包含相同内容的那一行合并在一起。
+
+常用的选项有：
+|选项|说明|
+|--|--|
+|-t|指定分隔符，默认为空格|
+|-i|忽略大小写的差异|
+|-1|指明第一个文件要用哪个字段来对比，默认对比第一个字段|
+|-2|指明第二个文件要用哪个字段来对比，默认对比第一个字段|
+
+操作举例：
+创建两个文件
+```
+echo '1 hello' > file1
+echo '1 shiyanlou' > file2
+join file1 file2```
+将/etc/passwd与/etc/shadow两个文件合并，指定以**':'**作为分隔符
+`sudo join -t':' /etc/passwd /etc/shadow`
+将/etc/passwd与/etc/group两个文件合并，指定以**':'**作为分隔符, 分别比对第4和第3个字段
+`sudo join -t':' -1 4 /etc/passwd -2 3 /etc/group`
+
+---
+**paste**命令
+paste这个命令与join 命令类似，它是在不对比数据的情况下，简单地将多个文件合并一起，以Tab隔开。
+
+常用的选项有：
+|选项|说明|
+|--|--|
+|-d|指定合并的分隔符，默认为Tab|
+|-s|不合并到一行，每个文件为一行|
+
+操作举例：
+```
+echo hello > file1
+echo shiyanlou > file2
+echo www.shiyanlou.com > file3
+paste -d ':' file1 file2 file3
+paste -s file1 file2 file3```
+
+---
+**xargs **分割参数列表
+xargs 是一条 UNIX 和类 UNIX 操作系统的常用命令。它的作用是将参数列表转换成小块分段传递给其他命令，以避免参数列表过长的问题。
+这个命令在有些时候十分有用，特别是当用来处理产生大量输出结果的命令如 find，locate 和 grep 的结果，详细用法请参看 man 文档。
+`cut -d: -f1 < /etc/passwd | sort | xargs echo`
+上面这个命令用于将/etc/passwd文件按:分割取第一个字段排序后，使用echo命令生成一个列表。
+
+---
+
+命令行将**图片转换为 ascii 字符**查看的工具 aview/asciiview(黑白的)
+彩色的：
+```
+sudo apt-get install caca-utils
+cacaview <pic_file>
+cacademo
+cacafire```
+
+---
+## 重定向
+**标准错误重定向**
+
+重定向标准输出到文件，这是一个很实用的操作，另一个很实用的操作是将标准错误重定向，标准输出和标准错误都被指向伪终端的屏幕显示，所以我们经常看到的一个命令的输出通常是同时包含了标准输出和标准错误的结果的。比如下面的操作：
+
+使用cat 命令同时读取两个文件，其中一个存在，另一个不存在
+`cat Documents/test.c hello.c`
+你可以看到除了正确输出了前一个文件的内容，还在末尾出现了一条错误信息
+下面我们将输出重定向到一个文件，根据我们前面的经验，这里将在看不到任何输出了
+`cat Documents/test.c hello.c > somefile`
+
+这里依然出现了那条错误信息，这正是因为如我上面说的那样，标准输出和标准错误虽然都指向终端屏幕，实际它们并不一样。那有的时候我们就是要可以隐藏某些错误或者警告，那又该怎么做呢。这就需要用到我们前面讲的文件描述符了：
+
+将标准错误重定向到标准输出，再将标准输出重定向到文件，注意要将重定向到文件写到前面
+`cat Documents/test.c hello.c >somefile  2>&1`
+或者只用bash提供的特殊的重定向符号"&"将标准错误和标准输出同时重定向到文件
+`cat Documents/test.c hello.c &>somefilehell`
+
+注意你应该在输出重定向文件**描述符**前加上**&**,否则shell会当做重定向到一个文件名为1的文件中
+
+---
+**tee命令**同时重定向到多个文件
+经常你可能还有这样的需求，除了将需要将输出重定向到文件之外也需要将信息打印在终端**(打印终端的同时输出到文件)**，那么你可以使用tee命令来实现：
+`echo 'hello shiyanlou' | tee hello`
+
+---
+**永久重定向**
+
+前面的重定向操作都只是临时性的，即只对当前命令有效，那如何做到“永久”有效呢，比如在一个脚本中，你需要某一部分的命令的输出全部进行重定向，难道要让你在每个命令上面加上临时重定向的操作嘛，当然不需要，我们可以使用**exec**命令实现“永久”重定向。**exec**命令的作用是使用指定的命令替换当前的 Shell，及使用一个进程替换当前进程，或者指定新的重定向：
+
+先开启一个子 Shell:`zsh`
+使用exec替换当前进程的重定向，将标准输出重定向到一个文件:`exec 1>somefile`
+后面你执行的命令的输出都将被重定向到文件中,直到你退出当前子shell，或取消exec的重定向（后面将告诉你怎么做）
+```
+ls
+exit
+cat somefile```
+
+---
+**创建输出文件描述符**
+默认在 Shell 中可以有9个打开的文件描述符，上面我们使用了也是它默认提供的0,1,2号文件描述符，另外我们还可以使用3-8的文件描述符，只是它们默认没有打开而已，你可以使用下面命令查看当前 Shell 进程中打开的文件描述符：
+`cd /dev/fd/;ls -Al`
+
+同样使用exec命令可以创建新的文件描述符：
+```
+zsh
+exec 3>somefile
+# 先进入目录，再查看，否则你可能不能得到正确的结果，然后再回到上一次的目录
+cd /dev/fd/;ls -Al;cd -
+# 注意下面的命令>与&之间不应该有空格，如果有空格则会出错
+echo "this is test" >&3
+cat somefile
+exit```
+
+---
+**关闭文件描述符**
+如上面我们打开的3号文件描述符，可以使用如下操作将它关闭：
+```
+exec 3>&-
+cd /dev/fd;ls -Al;cd ```
+
+---
+**完全屏蔽命令的输出**
+在 Linux 中有一个被成为“黑洞”的设备文件,所以导入它的数据都将被“吞噬”。
+在类 UNIX 系统中，**/dev/null**，或称空设备，是一个特殊的设备文件，它通常被用于丢弃不需要的输出流，或作为用于输入流的空文件，这些操作通常由重定向完成。读取它则会立即得到一个**EOF**。
+我们可以利用设个/dev/null屏蔽命令的输出：
+`cat Documents/test.c nefile 1>/dev/null 2>&1`
+上面这样的操作将使你得不到任何输出结果。
 
 
 ---
