--- a/source/_drafts/Python/2016-12-10-Python入门.md
+++ b/source/_drafts/Python/2016-12-10-Python入门.md
@@ -1,10 +1,11 @@
 ---
 title: Python入门
 categories:
-  - null
+  - Python
 tags:
   - Python入门
 top: 10
+abbrlink: 21062
 date: 2016-12-10 11:32:15
-keywords:
+keywords: Python入门
 ---
