--- a/source/_drafts/Shell/2016-12-10-Shell编程入门.md
+++ b/source/_drafts/Shell/2016-12-10-Shell编程入门.md
@@ -1,10 +1,11 @@
 ---
 title: Shell编程入门
 categories:
-  - null
+  - Shell
 tags:
   - Shell编程入门
 top: 10
+abbrlink: 40666
 date: 2016-12-10 11:32:37
-keywords:
+keywords: Shell编程入门
 ---
