--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -90,6 +90,10 @@ XX-Net:https://github.com/XX-net/XX-Net
 
 https://www.dou-bi.co
 
+各种SS：https://liyuans.com/archives/free-ss-account-collection.html
+
+如有乐享：http://51.ruyo.net
+
 ---
 # Docker
 Docker平台：https://www.daocloud.io
@@ -97,6 +101,10 @@ Docker平台：https://www.daocloud.io
 ---
 # Python生成二维码
 艺术二维码：https://github.com/sylnsfar/qrcode
+
+---
+# 素材
+PS 插件和小软件推荐：http://www.4kong.com
 
 ---
 # 学习、技能
