--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -91,6 +91,19 @@ skip_render:
     - .nojekyll
     - Staticfile
 
+# 假设你的Source文件夹里面有个Demo目录，要忽略Demo目录下的所有html页面，具体如下：
+
+# skip_render: Demo/*.html
+# 文件匹配是基于正则匹配的，更复杂的情况如下
+# 1.单个文件夹下全部文件：skip_render: demo/*
+# 2.单个文件夹下指定类型文件：skip_render: demo/*.html
+# 3.单个文件夹下全部文件以及子目录:skip_render: demo/**
+# 4.多个文件夹以及各种复杂情况：
+# skip_render:
+#     - 'demo/*.html'
+#     - 'demo/**'
+
+
 #强制包含.nojekyll文件（放在source下），这样hexo g时，.开头的文件具不会被忽略，适用于5.0以下版本的next主题（github屏蔽了一些文件夹）
 include:
   - .nojekyll
