--- a/source/_posts/系统管理/2016-11-25-Linux常用命令.md
+++ b/source/_posts/系统管理/2016-11-25-Linux常用命令.md
@@ -325,6 +325,7 @@ col 命令可以将Tab换成对等数量的空格建，或反转这个操作。
 学过数据库的用户对这个应该不会陌生，这个命令就是用于将两个文件中包含相同内容的那一行合并在一起。
 
 常用的选项有：
+
 |选项|说明|
 |--|--|
 |-t|指定分隔符，默认为空格|
@@ -348,6 +349,7 @@ join file1 file2```
 paste这个命令与join 命令类似，它是在不对比数据的情况下，简单地将多个文件合并一起，以Tab隔开。
 
 常用的选项有：
+
 |选项|说明|
 |--|--|
 |-d|指定合并的分隔符，默认为Tab|
@@ -366,7 +368,7 @@ paste -s file1 file2 file3```
 xargs 是一条 UNIX 和类 UNIX 操作系统的常用命令。它的作用是将参数列表转换成小块分段传递给其他命令，以避免参数列表过长的问题。
 这个命令在有些时候十分有用，特别是当用来处理产生大量输出结果的命令如 find，locate 和 grep 的结果，详细用法请参看 man 文档。
 `cut -d: -f1 < /etc/passwd | sort | xargs echo`
-上面这个命令用于将/etc/passwd文件按:分割取第一个字段排序后，使用echo命令生成一个列表。
+上面这个命令用于将/etc/passwd文件按**:**分割取第一个字段排序后，使用echo命令生成一个列表。
 
 ---
 
