--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -95,6 +95,11 @@ https://www.dou-bi.co
 如有乐享：http://51.ruyo.net
 
 ---
+# 高精度IP定位
+普通精度IP定位：https://www.opengps.cn/Data/IP/IPSearch.aspx
+百度高精度IP定位：https://www.opengps.cn/Data/IP/IPHighAccuracy.aspx
+
+---
 # Docker
 Docker平台：https://www.daocloud.io
 
