--- a/source/_posts/系统管理/2016-11-02-iptables防火墙.md
+++ b/source/_posts/系统管理/2016-11-02-iptables防火墙.md
@@ -8,7 +8,50 @@ abbrlink: 61534
 date: 2016-11-02 16:08:29
 ---
 
-#### 网上看到一篇博客，讲的很详细，摘录分享。
+# iptables
+
+## 简版
+Centos 查看端口占用情况命令，比如查看 80 端口占用情况使用如下命令：
+`lsof -i tcp:80`
+ 
+列出所有端口 ：`netstat -ntlp`
+ 
+### 开启端口（以 80 端口为例）  
+方法一：
+```
+/sbin/iptables -I INPUT -p tcp --dport 80 -j ACCEPT    #写入修改
+/etc/init.d/iptables save                              #保存修改
+service iptables restart                               #重启防火墙，修改生效```
+ 
+方法二：
+```
+vi /etc/sysconfig/iptables     
+打开配置文件加入如下语句 : 
+-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT    #重启防火墙，修改完成```
+ 
+### 关闭端口
+方法一：
+```
+/sbin/iptables -I INPUT -p tcp --dport 80 -j DROP   #写入修改
+/etc/init.d/iptables save                           #保存修改
+service iptables restart                            #重启防火墙，修改生效```
+ 
+方法二：  
+```
+vi /etc/sysconfig/iptables    
+打开配置文件加入如下语句 : 
+-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j DROP   
+重启防火墙，修改完成```
+ 
+### 查看端口状态
+```
+/etc/init.d/iptables status
+netstat -lntp        #查看监听 (Listen) 的端口
+netstat -antp        #查看所有建立的 TCP 连接```
+
+---
+## 详细版
+网上看到一篇博客，讲的很详细，摘录分享。
 
 iptables 是一个安装在Ubuntu Server上的默认防火墙。在正常的ubuntu安装过程中，iptables是被安装上了的，但是它默认允许所有的流量(不管防火墙是否是无效的)
 关于iptables有价值的信息很多，但是大多都描述的很复杂。如果你想做些基本的配置，下面的 How To 很适合你。 
