--- a/source/_posts/杂项/2016-12-06-博客中插入音乐-视频.md
+++ b/source/_posts/杂项/2016-12-06-博客中插入音乐-视频.md
@@ -37,7 +37,16 @@ Markdown 作为轻量级的标记语言，兼容 html 语法，可以直接在 M
 
 网站生成代码，点分享即可生成播放代码。
 ![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161206/173516104.png)
-<iframe height=498 width=510 src='http://player.youku.com/embed/XNjIyMjY4MjM2' frameborder=0 'allowfullscreen'></iframe>
+
+---
+> **来两段B站小仙女微小微的舞蹈，不谢。**
+
+**HTML**
+<embed height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="http://static.hdslb.com/miniloader.swf" flashvars="aid=4013860&page=1" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
+
+**Flash**
+<embed height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="http://static.hdslb.com/miniloader.swf?aid=5553924&page=1"></embed>
+
 
 ---
 ## 音频：
